chore(update): dependencies