@@ -12,11 +12,11 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>2.6.6</version>
     </parent>
 
     <modules>
-        <module>osb-dashboard</module>
+        <!--<module>osb-dashboard</module>-->
         <module>osb-core</module>
         <module>osb-persistence</module>
         <module>osb-deployment</module>
@@ -26,8 +26,8 @@
     <properties>
         <resource.dir>${basedir}/../osb-service/src/main/resources</resource.dir>
         <dashboard.module>postgresql</dashboard.module>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
-        <java.version>11</java.version>
+        <spring-cloud.version>2021.0.1</spring-cloud.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -68,7 +68,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>3.2.2</version>
                     <executions>
                         <execution>
                             <goals>
@@ -80,7 +80,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
-                    <version>2.3.5.RELEASE</version>
+                    <version>2.6.6</version>
                     <executions>
                         <execution>
                             <goals>
@@ -105,7 +105,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+                        <argLine>-Xmx512m</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
